--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,7 +16,7 @@
       <!-- Typography CSS -->
       <link rel="stylesheet" href="css/typography.css">
       <!-- Style CSS -->
-      <link rel="stylesheet" href="css/style.css">
+      <link rel="stylesheet" href="css/test.css">
       <!-- Responsive CSS -->
       <link rel="stylesheet" href="css/responsive.css">
    </head>
