--- a/css/test.css
+++ b/css/test.css
@@ -1216,6 +1216,16 @@ footer .logo {
 #team, #partners {
   margin: 200px 0 0 0; }
 
+.team-box {
+  border: 1px solid rgba(0, 0, 0, 0.07);
+  box-shadow: 0px 20px 10px 3px rgba(0, 0, 0, 0.07);
+  padding: 3%;
+}
+
+.team-box, .team-box img {
+  border-radius: 3%;
+}
+
 .team-box .team-img .team-2 {
   position: absolute;
   top: 0;
