Home page update

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
       <!-- Required meta tags -->
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-      <title>Vizion - Al/ML - Chatbot Responsive HTML5 Template</title>
+      <title>Limechat AI</title>
       <!-- Favicon -->
       <link rel="shortcut icon" href="images/favicon.ico">
       <!-- Bootstrap CSS -->
@@ -36,8 +36,8 @@
                <div class="col-lg-9">
                   <nav class="navbar navbar-expand-lg navbar-light">
                      <a class="navbar-brand" href="index.html">
-                     <img class="logo" src="images/logo.png" alt="image">
-                     <img class="logo-stiky" src="images/logo-stiky.png" alt="image">
+                     <img class="logo" src="images/limechat-logo-dark.png" alt="image">
+                     <img class="logo-stiky" src="images/limechat-logo.png" alt="image">
                      </a>
                      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                      <span class="navbar-toggler-icon"></span>
