Header footer contact us

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,21 +5,45 @@
          <div class="container">
             <div class="row align-items-center">
                <div class="col-lg-3 col-md-4 col-sm-12 re-center">
-                  <a href="index.html"><img class="img-fluid logo" alt="#" src="images/footer-logo.png"></a>
-                  <div class="link mt-2">Design By <a href="https://iqonicthemes.com/">iqonictheme</a></div>
+                  <a href="index.html"><img class="img-fluid logo" alt="#" src="images/limechat-logo.png"></a>
+                  <div class="link mt-2">91 Springboard, Sector 44, Gurgaon, Haryana, India-122003</div>
                </div>
-               <div class="col-lg-6 col-md-4 col-sm-12 text-center text-uppercase">
-                  <ul class="copyright">
-                     <li class="d-inline ml-4 mr-4"><a href="privacy-policy.html">Privacy Policy</a></li>
-                     <li class="d-inline ml-4 mr-4"><a href="contact-us.html">Contact Us</a></li>
-                  </ul>
+               <div class="col-lg-6 col-md-4 col-sm-12 text-uppercase">
+
+                  <div class="row">
+                     <ul class="copyright col-sm-6">
+                        <li class="d-inline ml-4 mr-4"><a href="#">Home</a></li><br>
+                        <li class="d-inline ml-4 mr-4"><a href="#">About Us</a></li><br>
+                        <li class="d-inline ml-4 mr-4"><a href="#">Technology</a></li><br>
+                        <li class="d-inline ml-4 mr-4"><a href="#">Blog</a></li><br>
+                     </ul>
+                     <ul class="copyright col-sm-6">
+                        <li class="d-inline ml-4 mr-4"><a href="#">Sales</a></li><br>
+                        <li class="d-inline ml-4 mr-4"><a href="#">Customer Support</a></li><br>
+                        <li class="d-inline ml-4 mr-4"><a href="#">Analytics</a></li><br>
+                        <li class="d-inline ml-4 mr-4"><a href="#">FAQs</a></li><br>
+                     </ul>
+                  </div>
+
                </div>
                <div class="col-lg-3 col-md-4 col-sm-12 text-right r-mt3">
                   <ul class="media-box">
-                     <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                     <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                     <li><a href="#"><i class="fab fa-google-plus-g"></i></a></li>
+                     <li><a href="https://twitter.com/LimeChatAI"><i class="fab fa-twitter"></i></a></li>
+                     <li><a href="https://www.linkedin.com/company/limechat/"><i class="fab fa-linkedin"></i></a></li>
+                     <li><a href="https://www.facebook.com/limechat"><i class="fab fa-facebook-f"></i></a></li>
+                     <li><a href="https://www.youtube.com/channel/UCQcBFZLBqP252UIO0KpsSBg"><i class="fab fa-youtube"></i></a></li>
                   </ul>
+               </div>
+               <br>
+               <br>
+               <br>
+               <br>
+               <br>
+               <br>
+               <br>
+               <br>
+               <div class="col-sm-12 text-center text-bold">
+                  An Artificial Intelligence Company @CopyRight 2020, Limechat
                </div>
             </div>
          </div>
