--- a/_includes/header.html
+++ b/_includes/header.html
@@ -51,12 +51,24 @@
                               <a class="nav-link" href="about-us.html">About Us</a>
                            </li>
                            <li class="nav-item">
-                              <a class="nav-link" href="features.html">Features</a>
-                           </li>
-                           <li class="nav-item">
-                              <a class="nav-link" href="contact-us.html">Contact</a>
+                              <a class="nav-link" href="features.html">Technology</a>
                            </li>
                            <li class="nav-item dropdown">
+                              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                              Features
+                              </a>
+                              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                 <a class="dropdown-item" href="pricing.html">Sales</a>
+                                 <a class="dropdown-item" href="blog.html">Customer Support</a>
+                                 <a class="dropdown-item" href="feadback.html">Analytics</a>
+                                 <a class="dropdown-item" href="404-error.html">FAQs</a>
+                              </div>
+                           </li>
+                           
+                           <li class="nav-item">
+                              <a class="nav-link" href="https://blog.limechat.ai/">Blog</a>
+                           </li>
+                           <li class="nav-item dropdown" style="display: none;">
                               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                               Pages
                               </a>
@@ -77,8 +89,7 @@
                </div>
                <div class="col-lg-3 text-right">
                   <ul class="login">
-                     <li class="d-inline"><a href="login.html">Login</a></li>
-                     <li class="d-inline active"><a href="register.html">Register</a></li>
+                     <li class="d-inline active"><a href="contact-us.html">Get Demo</a></li>
                   </ul>
                </div>
             </div>
