--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -68,7 +68,6 @@
          Cookies -->
       <!-- Optional JavaScript -->
       <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-      <script src="js/jquery-3.3.1.min.js"></script>
       <script src="js/popper.min.js"></script>
       <script src="js/bootstrap.min.js"></script>
       <!-- Owl Carousel -->
@@ -83,5 +82,6 @@
       <script src="js/main.js"></script>
       <!-- Custom -->
       <script src="js/custom.js"></script>
+      <script src="js/circle.js"></script>
    </body>
 </html>
