--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,6 +19,8 @@
       <link rel="stylesheet" href="css/test.css">
       <!-- Responsive CSS -->
       <link rel="stylesheet" href="css/responsive.css">
+      <link rel="stylesheet" href="css/circle.css">
+      <script src="js/jquery-3.3.1.min.js"></script>
    </head>
    <body>
       <!-- loading -->
