FAQ tnc tos footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,23 +5,22 @@
          <div class="container">
             <div class="row align-items-center">
                <div class="col-lg-3 col-md-4 col-sm-12 re-center">
-                  <a href="index.html"><img class="img-fluid logo" alt="#" src="images/limechat-logo.png"></a>
-                  <div class="link mt-2">91 Springboard, Sector 44, Gurgaon, Haryana, India-122003</div>
+                  <a href="index.html"><img alt="#" src="images/limechat-logo.png" style="height: 50px; width: auto;"></a>
                </div>
                <div class="col-lg-6 col-md-4 col-sm-12 text-uppercase">
 
                   <div class="row">
                      <ul class="copyright col-sm-6">
-                        <li class="d-inline ml-4 mr-4"><a href="#">Home</a></li><br>
-                        <li class="d-inline ml-4 mr-4"><a href="#">About Us</a></li><br>
-                        <li class="d-inline ml-4 mr-4"><a href="#">Technology</a></li><br>
-                        <li class="d-inline ml-4 mr-4"><a href="#">Blog</a></li><br>
+                        <li class="d-inline ml-4 mr-4"><a href="index.html">Home</a></li><br>
+                        <li class="d-inline ml-4 mr-4"><a href="about-us.html">About Us</a></li><br>
+                        <li class="d-inline ml-4 mr-4"><a href="technology.html">Technology</a></li><br>
+                        <li class="d-inline ml-4 mr-4"><a href="https://blog.limechat.ai">Blog</a></li><br>
                      </ul>
                      <ul class="copyright col-sm-6">
-                        <li class="d-inline ml-4 mr-4"><a href="#">Sales</a></li><br>
-                        <li class="d-inline ml-4 mr-4"><a href="#">Customer Support</a></li><br>
-                        <li class="d-inline ml-4 mr-4"><a href="#">Analytics</a></li><br>
-                        <li class="d-inline ml-4 mr-4"><a href="#">FAQs</a></li><br>
+                        <li class="d-inline ml-4 mr-4"><a href="features.html">Sales</a></li><br>
+                        <li class="d-inline ml-4 mr-4"><a href="features.html">Customer Support</a></li><br>
+                        <li class="d-inline ml-4 mr-4"><a href="features.html">Analytics</a></li><br>
+                        <li class="d-inline ml-4 mr-4"><a href="faq.html">FAQs</a></li><br>
                      </ul>
                   </div>
 
@@ -45,6 +44,12 @@
                <div class="col-sm-12 text-center text-bold">
                   An Artificial Intelligence Company @CopyRight 2020, Limechat
                </div>
+               <div class="col-sm-12 text-center">
+                  <a href="privacy-policy.html">Privacy Policy</a>
+                  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                  <a href="terms-of-service.html">Terms of Service</a>
+               </div>
+               
             </div>
          </div>
          <!-- back-to-top -->
