--- a/css/test.scss
+++ b/css/test.scss
@@ -38,10 +38,10 @@ $white : #ffffff;
 $col1 : #222222;
 $col2 : #dddddd;
 $col3 : #666666;
-$primary1 : #811BAC;
-$primary2 : #1B83AC;
-$primary3 : #815ded;
-$primary4 : #a424dc;
+$primary1 : #6BAC1B;
+$primary2 : #489618;
+$primary3 : #6BAC1B;
+$primary4 : #6BAC1B;
 
 // $primary1 : #7d4ac7;
 // $primary2 : #a733bb;
