Added channel and integrations

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -42,7 +42,7 @@
                <br>
                <br>
                <div class="col-sm-12 text-center text-bold">
-                  An Artificial Intelligence Company @CopyRight 2020, Limechat
+                  An Artificial Intelligence Company &emsp; @ CopyRight 2020, Limechat
                </div>
                <div class="col-sm-12 text-center">
                   <a href="privacy-policy.html">Privacy Policy</a>
