--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -106,6 +106,7 @@
       <script src="js/main.js"></script>
       <!-- Custom -->
       <script src="js/custom.js"></script>
+      <!-- Circle -->
       <script src="js/circle.js"></script>
    </body>
 </html>
