--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,7 +19,9 @@
       <link rel="stylesheet" href="css/test.css">
       <!-- Responsive CSS -->
       <link rel="stylesheet" href="css/responsive.css">
+      <!-- Circle CSS -->
       <link rel="stylesheet" href="css/circle.css">
+      <!-- JQuery Script -->
       <script src="js/jquery-3.3.1.min.js"></script>
    </head>
    <body>
