--- a/css/test.css
+++ b/css/test.css
@@ -947,13 +947,6 @@ Blog Detail
   -o-transition: all 0.3s ease-out 0s;
   transition: all 0.3s ease-out 0s; }
 
-.clients-box:hover {
-  top: -6px;
-  border: 1px solid #e2e2e2;
-  -webkit-box-shadow: 0px 10px 46px -4px rgba(0, 0, 0, 0.5);
-  -moz-box-shadow: 0px 10px 46px -4px rgba(0, 0, 0, 0.5);
-  box-shadow: 0px 10px 46px -4px rgba(0, 0, 0, 0.5); }
-
 .iq-clients .owl-carousel .owl-item {
   padding: 10px 10px 20px 10px; }
 
@@ -1216,6 +1209,14 @@ footer .logo {
 #team, #partners {
   margin: 200px 0 0 0; }
 
+.team-box {
+  border: 1px solid rgba(0, 0, 0, 0.07);
+  box-shadow: 0px 20px 10px 3px rgba(0, 0, 0, 0.07);
+  padding: 3%; }
+
+.team-box, .team-box img {
+  border-radius: 3%; }
+
 .team-box .team-img .team-2 {
   position: absolute;
   top: 0;
@@ -1232,6 +1233,9 @@ footer .logo {
 
 .team-box p {
   margin-bottom: 0; }
+
+.team-box:hover h5 {
+  color: #1B83AC; }
 
 /*---------------------------------------------------------------------
 11 Pricing
