--- a/css/typography.css
+++ b/css/typography.css
@@ -53,6 +53,7 @@ h2 { font-size: 36px; font-style: normal; line-height: 50px; }
 h3 { font-size: 24px; font-style: normal; line-height: 36px; }
 ul { margin: 0px; padding: 0px; }
 section { padding: 80px 0; }
+section .half-margin { padding: 20px 0; }
 
 /*---------------------------------------------------------------------
 4 Input and textarea
