Created seperate feature pages

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -62,9 +62,9 @@
                               Features
                               </a>
                               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                 <a class="dropdown-item" href="features.html">Sales</a>
-                                 <a class="dropdown-item" href="features.html">Customer Support</a>
-                                 <a class="dropdown-item" href="features.html">Analytics</a>
+                                 <a class="dropdown-item" href="sales.html">Sales</a>
+                                 <a class="dropdown-item" href="support.html">Customer Support</a>
+                                 <a class="dropdown-item" href="analytics.html">Analytics</a>
                               </div>
                            </li>
                            
