--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -41,10 +41,10 @@
                <br>
                <br>
                <br>
-               <div class="col-sm-12 text-center text-bold">
-                  An Artificial Intelligence Company &emsp; @ CopyRight 2020, Limechat
+               <div class="col-sm-12 text-center text-bold" style="display: flex; align-items: center; justify-content: center; flex-direction: column;">
+                  <span>An Artificial Intelligence Company </span><span> @ CopyRight 2020, Limechat</span>
                </div>
-               <div class="col-sm-12 text-center">
+               <div class="col-sm-12 text-center" style="display: flex; align-items: center; justify-content: center;">
                   <a href="privacy-policy.html">Privacy Policy</a>
                   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                   <a href="terms-of-service.html">Terms of Service</a>
