--- a/css/test.css
+++ b/css/test.css
@@ -464,6 +464,61 @@ header.menu-sticky .login li a:hover {
   background: url(../images/works/works-arrow2.png);
   background-repeat: no-repeat; }
 
+.technology-banner {
+  padding: 0px 90px 65px 90px;
+  position: relative;
+  overflow: hidden;
+  background-color: #ffffff; }
+
+.technology-banner h1 {
+  font-size: 60px;
+  font-weight: bold; }
+
+.technology-banner h3 {
+  font-size: 24px;
+  font-weight: bold;
+  color: #6BAC1B; }
+
+.technology-about .row {
+  margin-top: 25px; }
+
+.technology-about h3 {
+  font-size: 30px;
+  font-weight: bold;
+  color: #222222; }
+
+.technology-about p, .technology-level3 p, .technology-how-better p {
+  font-size: 20px;
+  color: #666666; }
+
+.technology-level3, .technology-how-better {
+  text-align: center;
+  margin-top: 70px;
+  margin-bottom: 30px; }
+
+.technology-level3 h3, .technology-how-better h4 {
+  font-size: 25px;
+  font-weight: bold;
+  color: #666666; }
+
+.technology-level3-card {
+  padding: 30px 10px;
+  transition: 0.6s;
+  width: 25%; }
+
+.technology-level3-card:hover {
+  box-shadow: 0px 0px 30px 9px rgba(107, 172, 27, 0.3);
+  transform: translateY(-10px); }
+
+.technology-number {
+  color: #6BAC1B;
+  opacity: 0.5;
+  font-size: 118px;
+  font-weight: bold; }
+
+.technology-how-text {
+  text-align: start; }
+
 /*---------------------------------------------------------------------
 5 Blog
 -----------------------------------------------------------------------*/
