--- a/css/test.scss
+++ b/css/test.scss
@@ -169,6 +169,23 @@ to { -webkit-transform: rotate(-359deg); }
 .works-arrow1, .works-arrow2 { position: relative; }
 .works-arrow1:after { position: absolute; bottom: -285px; left: 221px; content: ""; width: 100%; height: 285px; background: url(../images/works/works-arrow1.png); background-repeat: no-repeat; }
 .works-arrow2:after { position: absolute; bottom: -285px; right: -230px; content: ""; width: 100%; height: 285px; background: url(../images/works/works-arrow2.png); background-repeat: no-repeat; }
+
+.technology-banner { padding: 0px 90px 65px 90px; position: relative; overflow: hidden; background-color: $white; }
+.technology-banner h1 { font-size: 60px; font-weight: bold; }
+.technology-banner h3 { font-size: 24px; font-weight: bold; color: $primary3; }
+
+.technology-about .row { margin-top: 25px; }
+.technology-about h3 { font-size: 30px; font-weight: bold; color: $col1; }
+.technology-about p, .technology-level3 p, .technology-how-better p { font-size: 20px; color: $col3; }
+
+.technology-level3, .technology-how-better { text-align: center; margin-top: 70px; margin-bottom: 30px; }
+.technology-level3 h3, .technology-how-better h4 { font-size: 25px; font-weight: bold; color: $col3; }
+.technology-level3-card { padding: 30px 10px; transition: 0.6s; width: 25%; }
+.technology-level3-card:hover { box-shadow: 0px 0px 30px 9px rgba($primary4, 0.3); transform: translateY(-10px); }
+
+.technology-number { color: $primary4; opacity: 0.5; font-size: 118px; font-weight: bold; }
+.technology-how-text { text-align: start; }
+
 /*---------------------------------------------------------------------
 5 Blog
 -----------------------------------------------------------------------*/
