--- a/css/test.scss
+++ b/css/test.scss
@@ -170,7 +170,7 @@ to { -webkit-transform: rotate(-359deg); }
 .works-arrow1:after { position: absolute; bottom: -285px; left: 221px; content: ""; width: 100%; height: 285px; background: url(../images/works/works-arrow1.png); background-repeat: no-repeat; }
 .works-arrow2:after { position: absolute; bottom: -285px; right: -230px; content: ""; width: 100%; height: 285px; background: url(../images/works/works-arrow2.png); background-repeat: no-repeat; }
 
-.technology-banner { padding: 0px 90px 65px 90px; position: relative; overflow: hidden; background-color: $white; }
+.technology-banner { position: relative; overflow: hidden; background-color: $white; }
 .technology-banner h1 { font-size: 60px; font-weight: bold; }
 .technology-banner h3 { font-size: 24px; font-weight: bold; color: $primary3; }
 
