Removed Analytics Page

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -17,10 +17,10 @@
                         <li class="d-inline ml-4 mr-4"><a href="https://blog.limechat.ai">Blog</a></li><br>
                      </ul>
                      <ul class="copyright col-sm-6">
-                        <li class="d-inline ml-4 mr-4"><a href="features.html">Sales</a></li><br>
-                        <li class="d-inline ml-4 mr-4"><a href="features.html">Customer Support</a></li><br>
-                        <li class="d-inline ml-4 mr-4"><a href="features.html">Analytics</a></li><br>
+                        <li class="d-inline ml-4 mr-4"><a href="sales.html">Sales</a></li><br>
+                        <li class="d-inline ml-4 mr-4"><a href="support.html">Customer Support</a></li><br>
                         <li class="d-inline ml-4 mr-4"><a href="faq.html">FAQs</a></li><br>
+                        <li class="d-inline ml-4 mr-4"><a href="contact-us.html">Contact Us</a></li><br>
                      </ul>
                   </div>
 
