--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
       <title>Limechat AI</title>
       <!-- Favicon -->
-      <link rel="shortcut icon" href="images/favicon.png">
+      <link rel="shortcut icon" href="images/favicon.svg">
       <!-- Bootstrap CSS -->
       <link rel="stylesheet" href="css/bootstrap.min.css">
       <!-- Magnific Popup CSS-->
