--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -20,7 +20,7 @@
                         <li class="d-inline ml-4 mr-4"><a href="sales.html">Sales</a></li><br>
                         <li class="d-inline ml-4 mr-4"><a href="support.html">Customer Support</a></li><br>
                         <li class="d-inline ml-4 mr-4"><a href="faq.html">FAQs</a></li><br>
-                        <li class="d-inline ml-4 mr-4"><a href="contact-us.html">Contact Us</a></li><br>
+                        <li class="d-inline ml-4 mr-4"><a href="contact-us.php">Contact Us</a></li><br>
                      </ul>
                   </div>
 
