--- a/_includes/header.html
+++ b/_includes/header.html
@@ -113,7 +113,7 @@
                </div>
                <div class="col-lg-3 text-right">
                   <ul class="login">
-                     <li class="d-inline active"><a href="contact-us.html">Get Demo</a></li>
+                     <li class="d-inline active"><a href="contact-us.php">Get Demo</a></li>
                   </ul>
                </div>
             </div>
@@ -121,3 +121,13 @@
       </header>
       <!--=================================
          Header -->
+
+
+
+         <style type="text/css">
+            @media(max-width:600px) {
+               .navbar-brand img{
+                  width: 150px;
+               }
+            }
+         </style>
